--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
     </div>
   </div>
+  
   <!-- navbar -->
   <div class="navigation w-100">
     <div class="container">
@@ -472,7 +473,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
-        <a class="play-btn venobox" href="https://youtu.be/nA1Aqp0sPQo" data-vbtype="video">
+        <a class="play-btn venobox" href="https://www.youtube.com/watch?v=LOpsfowFJbM" data-vbtype="video">
           <i class="ti-control-play"></i>
         </a>
       </div>
